fixing the horizontal scroll on mobile

--- a/src/sections/Demo/Demo.styles.scss
+++ b/src/sections/Demo/Demo.styles.scss
@@ -318,12 +318,32 @@
                         padding-right: 16rem;
                         .generate__widget-examples {
                             .generate__widget-track {
-                                overflow-y: hidden;
-                                overflow-x: auto;
+                                height: auto;
                                 .generate__widget-list {
                                     grid-column-gap: 16rem;
                                     grid-row-gap: 16rem;
-                                    grid-template-columns: 1fr 1fr 1fr 1fr;
+                                    grid-template-columns: 1fr;
+                                    grid-template-rows: 1fr;
+                                    grid-auto-flow: column;
+                                    overflow-y: hidden;
+                                    overflow-x: auto;
+                                }
+                            }
+                        }
+                        .generate__widget-variations {
+                            left: 16rem;
+                            right: 16rem;
+                            .generate__widget-track {
+                                height: auto;
+                                .generate__widget-variations-list {
+                                    padding-right: 0rem;
+                                    grid-column-gap: 16rem;
+                                    grid-row-gap: 16rem;
+                                    grid-template-columns: 1fr;
+                                    grid-template-rows: 1fr;
+                                    grid-auto-flow: column;
+                                    overflow-y: hidden;
+                                    overflow-x: auto;
                                 }
                             }
                         }
